[package]
name = "runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
utils = { path = "../utils" }
collections = { path = "../collections" }

stakker = { version = "0.2.11", default-features = false }
log = "0.4.21"
ctrlc = "3.4.4"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52.0", features = ["Win32_Networking_WinSock"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2.150"
